--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,18 @@
 [build-system]
-requires = ["setuptools >= 77.0.3", "wheel"]
+requires = ["setuptools>=77.0.3"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "todol"
+version = "0.1.0"
+description = "A simple TUI todo app"
+readme = "README.md"
+license = { file = "LICENSE" }
+requires-python = ">=3.9"
+
+dependencies = [
+    "prompt_toolkit>=3.0.52"
+]
+
+[project.scripts]
+todol = "todol.main:main"
