--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "todol"
-version = "0.1.3"
-description = "A simple TUI todo app"
+version = "0.1.4"
+description = "A simple cli todo app"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
