--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "todol"
-version = "0.2.0"
-description = "A simple cli todo app"
+version = "0.2.1"
+description = "A python cli todo app"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
 
 dependencies = [
-    "prompt_toolkit>=3.0.52"
+    "prompt_toolkit>=3.0.52",
+    "platformdirs>=4.4.0"
 ]
 
 [project.scripts]
