Refactor command guide, enhance task display

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "todol"
-version = "0.2.1"
+version = "0.2.2"
 description = "A python cli todo app"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -12,7 +12,8 @@ requires-python = ">=3.9"
 
 dependencies = [
     "prompt_toolkit>=3.0.52",
-    "platformdirs>=4.4.0"
+    "platformdirs>=4.4.0",
+    "rich>=14.2.0"
 ]
 
 [project.scripts]
