--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "todol"
-version = "0.2.7"
+version = "0.2.8"
 description = "A python TUI todo app"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -12,8 +12,9 @@ requires-python = ">=3.9"
 
 dependencies = [
     "prompt_toolkit>=3.0.52",
-    "platformdirs>=4.4.0",
-    "rich>=14.2.0"
+    "platformdirs>=4.5.1",
+    "rich>=14.2.0",
+    "requests>=2.32.5"
 ]
 
 [project.scripts]
