View file created and documented 2 new flags: remove (batch works), done (batch works)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
 
 [project.scripts]
 todol = "todol.main:main"
+todol-view = "todol.todol_viewer:main"
+
 
 [tool.setuptools.packages.find]
 where = ["."]
